// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoubleOCity renders correctly 1`] = `
<g>
  <svg
    onContextMenu={[Function]}
    x={10}
    y={20}
  >
    <circle
      className="city-circle"
      cx={20}
      cy={20}
      fill="white"
      r={19}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
</g>
`;

exports[`DoubleOCity when there are two cities renders a NYC specific tile 1`] = `
<g
  transform="rotate(120 55.42562584220407 64)"
>
  <rect
    fill="black"
    height={40}
    width={38}
    x={5.42562584220407}
    y={45}
  />
  <rect
    fill="black"
    height={40}
    width={38}
    x={67.42562584220407}
    y={45}
  />
  <svg
    onContextMenu={[Function]}
    x={4.42562584220407}
    y={25}
  >
    <circle
      className="city-circle"
      cx={20}
      cy={20}
      fill="white"
      r={19}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
  <svg
    onContextMenu={[Function]}
    x={4.42562584220407}
    y={63}
  >
    <circle
      className="city-circle"
      cx={20}
      cy={20}
      fill="white"
      r={19}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
  <svg
    onContextMenu={[Function]}
    x={66.42562584220407}
    y={25}
  >
    <circle
      className="city-circle"
      cx={20}
      cy={20}
      fill="white"
      r={19}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
  <svg
    onContextMenu={[Function]}
    x={66.42562584220407}
    y={63}
  >
    <circle
      className="city-circle"
      cx={20}
      cy={20}
      fill="white"
      r={19}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
</g>
`;
